Добавил получение пользователя по id
